@startuml
class Jugador {
        -nombre
        +estasEnLLegada()
}

Abstract class Vehiculo {
        +estasEnLLegada()
        +mover(direccion)
        +sumarMovimiento()
}

class Mapa {
        +estoyEnLLegada(posicion: Posicion)
        +puedoMover(direccion)
}

class Moto {
        + initialize()
        +estasEnLLegada()
        +mover(direccion)
        +sumarMovimiento()
}

class Auto {
        + initialize()
        +estasEnLLegada()
        +mover(direccion)
        +sumarMovimiento()
}

class Camioneta {
        + initialize()
        +estasEnLLegada()
        +mover(direccion)
        +sumarMovimiento()
}

Vehiculo <|-- Moto
Vehiculo <|-- Auto
Vehiculo <|-- Camioneta
Jugador --> "*" Vehiculo
Vehiculo "*" --> "1" Mapa

@enduml
